# xuance

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING_CN.md  LICENSE.txt  README.md  README_CN.md  benchmark.py  benchmark_marl.py  demo.py  demo_.py  demo_marl.py  demo_mindspore.py  demo_tensorflow.py  example_ddpg.py  mkdocs.yml  pyproject.toml  quick_start.py  readthedocs.yaml  setup.cfg  setup.py  train_8m_and_5m_vs_6m.sh  train_8m_vs_9m_and_25m.sh  train_c51.sh  train_corridor_and_MMM2.sh  train_dqn_D_E.sh  train_dqn_D_G.sh  train_iql_vdn.sh  train_mappo.sh  train_ppo.sh  train_qmix.sh
BlackjackEnv/: BlackjackEnv.py  BlackjackEnv_vec.py  test_env.py
InforMARL/InforMARL-main/: .gitignore  LICENSE  README.md  papers.md  requirement.txt
MyTest/: 1.py  2.py  Blackjack.py  easy.py  easy_mas.py  easy_mas_Qmix.py  maddpg_simple_spread.py  mappo_test.py  ppo_atari.py  simple.py  simple_Lunar.py  simple_lular.py  testMy.ipynb  test_env.py
MyTest/I2C/: README.md  train.py  train_pytorch.py
MyTest/RL_project/: BlackjackEnv.py  Monte carlo.py  Q.npy  TD_alg.py  Util.py  V_table.npy  agent.py  dqn.py  dqn_agent.py  expected_sarsa.npy  q_learning.py  sarsa.py  test.ipynb
MyTest/conf_edit/: edit.py  edit_only_title.py  find_location.py
MyTest/configs/: basic.yaml  best_Lunar_C51.yaml  lular.yaml  maddpg_simple_spread_config.yaml  mappo.yaml  mpe_Qmix_test.yaml  mpe_test.yaml  ppo_atari_config.yaml  sac.yaml  test.yaml  uav_mappo.yaml
benchmark/: benchmark.py
benchmarks/: README.md  train.py
benchmarks/Atari/: dqn_atari.yaml  sac_atari.yaml
docs/: conf.py  environment.yaml  environment.yml  home.md  index.md  index.rst  requirements.txt
docs/agents/: index_drl.rst  index_marl.rst  iql.rst  vdn.rst
docs/source/: conf.py  index.rst
docs/tutorials/: basic_usage.rst  installation.rst
docs/usage/: basic_usage.rst  installation.rst  professional_usage.rst
env/: run.py  setup.py  snake_env_vec.py  test.yaml
examples/: benchmark.py  benchmark_marl.py  demo.py  demo_marl.py
examples/a2c/: a2c_atari.py  a2c_carracing.py  a2c_cartpole.py  a2c_minigrid.py  a2c_mujoco.py  a2c_pendulum.py
examples/c51/: c51_atari.py  c51_carracing.py  c51_cartpole.py  c51_minigrid.py
examples/coma/: coma_football.py  coma_sc2.py  coma_simple_spread.py
examples/commnet/: commnet_learner.py  commnet_policy.py  commnet_sc2.py  commnet_simple_spread.py
examples/curl/: curl_atari.py
examples/dcg/: dcg_football.py  dcg_rware.py  dcg_sc2.py
examples/ddpg/: ddpg_mujoco.py  ddpg_mujoco_config.yaml  ddpg_new_env.py  ddpg_pendulum.py  new_env.yaml
examples/ddqn/: ddqn_atari.py  ddqn_carracing.py  ddqn_cartpole.py  ddqn_minigrid.py
examples/dgn/: dgn_agents.py  dgn_learner.py  dgn_policy.py  dgn_sc2.py  dgn_simple_spread.py
examples/dqn/: dqn_atari.py  dqn_atari_config.yaml  dqn_carracing.py  dqn_cartpole.py  dqn_minigrid.py  dqn_new_env.py
examples/dreamer_v2/: dreamer_v2_atari.py  dreamer_v2_cartpole.py  dreamer_v2_cartpole_TODO.py  dreamer_v2_pendulum.py  dreamer_v2_pendulum_TODO.py
examples/dreamer_v3/: dreamer_v3_atari.py  dreamer_v3_cartpole.py  dreamer_v3_pendulum.py
examples/dreamerv3/: dreamerv3_cartpole.py  dreamerv3_pendulum.py
examples/drones/: demo_drones.py
examples/drq/: drq_atari.py
examples/drqn/: drqn_atari.py  drqn_carracing.py  drqn_cartpole.py  drqn_minigrid.py
examples/dueldqn/: dueldqn_atari.py  dueldqn_carracing.py  dueldqn_cartpole.py  dueldqn_minigrid.py
examples/expocomm/: expocomm.py  expocomm_agents.py  expocomm_learner.py  expocomm_policy.py  expocomm_sc2.py  expocomm_simple_spread.py  expocomm_smacv2.py
examples/hyperparameter_tuning/: tune_dqn.py  tune_dqn_multiobjective.py
examples/iac/: iac_football.py  iac_sc2.py  iac_simple_spread.py
examples/ic3net/: ic3net_sc2.py  ic3net_simple_spread.py
examples/iddpg/: iddpg_simple_spread.py
examples/ippo/: ippo_football.py  ippo_new_configs.yaml  ippo_new_env.py  ippo_sc2.py  ippo_simple_spread.py
examples/isac/: isac_simple_spread.py
examples/maddpg/: maddpg_simple_adversary.py  maddpg_simple_spread.py  maddpg_simple_spread_config.yaml
examples/magent2_competition/: iql_vs_mfq.py
examples/mappo/: mappo_football.py  mappo_rware.py  mappo_sc2.py  mappo_simple_spread.py
examples/masac/: masac_simple_spread.py  masac_simple_spread_config.yaml
examples/matd3/: matd3_simple_spread.py
examples/new_algorithm/: my_method.py  new_marl.py  new_marl.yaml  new_rl.py  new_rl.yaml
examples/new_environment/: drl_env.py  new_env.yaml
tests/: demo_a2c.py  main.py  test_drl.py  test_ms_marl_based.py  test_ms_policy_based.py  test_ms_value_based.py  test_tf_marl_based.py  test_tf_policy_based.py  test_tf_value_based.py  test_torch_marl_based.py  test_torch_policy_based.py  test_torch_value_based.py  test_xuanpolicy.py
xuance/: __init__.py
xuanpolicy/: __init__.py
xuanpolicy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+4573 files in other folders)
